tests/models/enum/named/u32/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        u32
    ),
}
fn main() {}
